--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* CSS RESETS */
 
-body,h1, hr, li, ul {
+body,h1, hr, li, ul, .website {
 	margin: 0px;
 	padding:0px;
 }
@@ -9,17 +9,15 @@ body,h1, hr, li, ul {
 
 body {
 	background-color: #ccc;
-	width: 1200px;
-	height: 2050px;
 }
 
 .website {	
-	width: 900px;
+	width: 1100px;
 	height: 2000px;
-	float: center;
 	background-color: #fff;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 	margin: 10px auto 0px auto;
+	padding: 20px;
 }
 
 /* Boxen */
@@ -48,6 +46,13 @@ body {
 	margin-top: 10px;
 }
 
+.box5 {
+	height: 220px;
+	width: 350px;
+	padding-top: 70px;
+	padding-left:189.5px;
+}
+
 
 /* Striche */
 
@@ -56,7 +61,7 @@ body {
 	border-top: 1px solid;
 	color: rgb(31,80,128);
 	background-color: none;
-	width: 800px;
+	width: 1020px;
 	height: 1px;
 	margin-left: 100px;
 	padding-top: 12.672px;
@@ -65,10 +70,10 @@ body {
 
 .Strich2 {
 	border: none;
-	border-top: 1px solid;
+	border-top: 0.75px solid;
 	color: rgb(31,80,128);
 	background-color: none;
-	width: 750px;
+	width: 970px;
 	height: 1px;
 	margin-left: 150px;
 	padding-bottom: 6.5px;}
@@ -80,7 +85,7 @@ body {
  
 #nav ul {
    list-style:none;         /* keine Aufzählungspunkte */
-   padding-left: 295px;
+   padding-left: 335px;
    padding-top: 22px;
    padding-bottom: 13px;
 }
@@ -94,7 +99,7 @@ body {
    color: black;
    text-decoration: none;
    background-color: rgb(240,240,240);
-   margin: 12px 15px 13px 15px;
+   margin: 12px 7.5px 13px 15px;
    padding: 4px 8px 4px 8px;
 } 
 
@@ -115,7 +120,7 @@ body {
  
 #years ul {
    list-style:none;         /* keine Aufzählungspunkte */
-   padding-left: 295px;
+   padding-left: 335px;
    padding-top: 37px;
    padding-bottom: 9.696px;
    padding-right: 300px;
@@ -127,42 +132,42 @@ body {
    font-size: 14pt;
    color: black;
    text-decoration: none;
-   margin: 12px 14px 13px 14px;
+   margin: 12px 7.5px 13px 15px;
 } 
 
 .zweiteSpalte {
 	position: relative;
-	left: 63px;
+	left: 59px;
 	top: -75px;
 }
 
 .dritteSpalte {
 	position: relative;
-	left: 126px;
+	left: 118px;
 	top: -150px;
 }
 
 .vierteSpalte {
 	position: relative;
-	left: 189px;
+	left: 177px;
 	top: -225px;
 }
 
 .fuenfteSpalte {
 	position: relative;
-	left: 252px;
+	left: 236px;
 	top: -300px;
 }
 
 .sechsteSpalte {
 	position: relative;
-	left: 315px;
+	left: 295px;
 	top: -375px;
 }
 
 .siebteSpalte {
 	position: relative;
-	left: 378px;
+	left: 353px;
 	top: -450px;
 }
 
@@ -177,11 +182,28 @@ body {
 /* Rahmen */
 
 #rectangle {
-	width: 560.5px;
-	height: 200px;
+	width: 760px;
+	height: 264px;
 	background-color: #fff;
+	border: solid;
 	border-color: rgb(240,240,240);
+	border-width: 1px;
 	border-radius: 12px;
+	margin-left: 189.5px;
+	margin-top: 75px;
+}
+
+/* Tabelle 1 */
+
+.Tabelle1 {
+	color: black;
+	text-align: left;
+	font-size: 12pt;
+	font-family: DINPro;
+	font-weight: normal;
+	line-height: 13pt;
+	padding-left: 368px;
+	margin-top: -62px;
 }
 
 /* TYPO */
@@ -192,9 +214,37 @@ h1 {
 	font-size: 48pt;
 	font-family: DINPro;
 	font-weight: normal;
-	padding-left: 195px;
+	padding-left: 205px;
 	padding-top: 42px;
 
+}
+
+h2 {
+	color: rgb(31,80,128);
+	text-align: left;
+	font-size: 14pt;
+	font-family: DINPro;
+	font-weight: bold;
+	padding-left: 20px;
+	padding-top: 0px;
+}
+
+.unterueberschrift {
+	color: black;
+	text-align: left;
+	font-size: 12pt;
+	font-family: DINPro;
+	font-weight: normal;
+	padding-left: 20px;
+
+}
+
+.fliesstext {
+	color: black;
+	text-align: left;
+	font-size: 12pt;
+	font-family: DINPro;
+	font-weight: normal;
 }
 
 
